syntax = "proto3";

package qa.grpc.rangiffler;

option java_multiple_files = true;
option java_package = "qa.grpc.rangiffler";
option java_outer_classname = "RangifflerProto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ProtoService{
  rpc GetFeed(GetFeedRequest) returns (GetFeedResponse) {}
  rpc LikePhoto(LikePhotoRequest) returns (GetFeedResponse) {}
  rpc AddPhoto(AddPhotoRequest) returns (GetFeedResponse) {}
  rpc DeletePhoto(RemovePhotoRequest) returns (google.protobuf.Empty) {}
}

message LikePhotoRequest {
  string photoId = 1;
  string userFirstnameWhoLikePhoto = 2;
}

message AddPhotoRequest {
  string userFirstname = 1;
  string countryName = 2;
  string description = 3;
  bytes photo = 4;
}

message RemovePhotoRequest {
  string photoId = 1;
  string userFirstnameWhoLikePhoto = 2;
}

message GetFeedRequest {
  string userFirstname = 1;
  bool withFriends = 2;
}

message GetFeedResponse {
  string photoId = 1;
  bytes photo = 2;
  string country = 3;
  string description = 4;
  Likes likes = 5;
}

message Likes {
  int32 total = 1;
  repeated LikesList likeList = 2;
}

message LikesList {
  string userFirstname = 1;
}